[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "emport"
description = "Utility library for performing programmatic imports"
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }

classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'Logbook>=0.11.0',
]
version = "1.3.1"
authors = [
    { name = "Rotem Yaari", email = "vmalloc@gmail.com" },
]

[project.optional-dependencies]
testing = [
    "pytest",
    "dessert",
]
