[build-system]
requires = ["hatchling>=0.25.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "emport"
description = "Utility library for performing programmatic imports"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ['Logbook>=0.11.0']
dynamic = ["version"]
authors = [{ name = "Rotem Yaari", email = "vmalloc@gmail.com" }]

[project.optional-dependencies]
testing = ["pytest", "dessert>=1.5.0"]

[tool.hatch.version]
source = "vcs"
